🐛 fix AdjustCriteria soft delete (#112)
* 🎨 Soft delete is available

* 🎨 Adjust Subject : batch insert is applied

* 🎨 Resetall by adjustId